--- a/index.jade
+++ b/index.jade
@@ -19,7 +19,7 @@ block content
 							tr
 								td Jul&nbsp;'19
 								td Amanda's 
-									a(href='') paper on stable boronic esters for oxidation-triggered drug delivery
+									a(href='https://doi.org/10.1021/acsabm.9b00399') paper on stable boronic esters for oxidation-triggered drug delivery
 									| &#32;has been accepted to ACS Applied Bio Materials!
 							tr
 								td May&nbsp;'19
