--- a/scss/app.scss
+++ b/scss/app.scss
@@ -344,3 +344,24 @@ h4 {margin-top:0;}
       width: 100%;
   }
 }
+
+
+ol hr{ 
+    display:block;
+    border:none;
+    color:white;
+    height:1px;
+    background:black;
+    background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 350, from(#000), to(#fff));
+	margin-top:0;
+	margin-bottom:1rem;
+}
+ol hr:first-of-type{ 
+    display:block;
+    border:none;
+    color:white;
+    height:1px;
+    background:white;
+	margin-top:0;
+	margin-bottom:0;
+}
