added Liz, removed lab application

--- a/people.jade
+++ b/people.jade
@@ -66,12 +66,6 @@ block content
 	-currentpeople[curnum].minors = ["Gender Studies"]
 	-curnum++
 	
-	-currentpeople.push({"email":"kimbe22a"})
-	-currentpeople[curnum].name = "Ariel Kimberley"
-	-currentpeople[curnum].year = "2021"
-	-currentpeople[curnum].majors = ["Biology, Spanish"]
-	-curnum++
-	
 	-currentpeople.push({"email":"windu22m"})
 	-currentpeople[curnum].name = "Maegan Windus"
 	-currentpeople[curnum].year = "2021"
@@ -84,10 +78,10 @@ block content
 	-currentpeople[curnum].majors = ["Biochemistry"]
 	-curnum++
 	
-	-currentpeople.push({"email":"worte22r"})
-	-currentpeople[curnum].name = "Rainy Wortelboer"
-	-currentpeople[curnum].year = "2024"
-	-currentpeople[curnum].majors = ["Undecided"]
+	-currentpeople.push({"email":"kuehn22e"})
+	-currentpeople[curnum].name = "Liz Kuehne"
+	-currentpeople[curnum].year = "2022"
+	-currentpeople[curnum].majors = ["Chemistry"]
 	-curnum++
 
 	-var pastpeople = []
@@ -111,7 +105,6 @@ block content
 	-pastpeople[pastnum].name = "Kristyn Norris"
 	-pastpeople[pastnum].year = "2016"
 	-pastpeople[pastnum].majors = ["Biochemistry"]
-	-pastpeople[pastnum].current = "Ph.D. Student at UMass Worcester"
 	-pastnum++
 		
 	-pastpeople.push({"email":"long24j"})
@@ -119,7 +112,6 @@ block content
 	-pastpeople[pastnum].year = "2016"
 	-pastpeople[pastnum].majors = ["Biochemistry"]
 	-pastpeople[pastnum].minors = ["Statistics"]
-	-pastpeople[pastnum].current = "Medical student"
 	-pastnum++
 	
 	-pastpeople.push({"email":"malik26a"})
@@ -167,6 +159,18 @@ block content
 	-pastpeople[pastnum].year = "2019"
 	-pastpeople[pastnum].majors = ["Biochemistry"]
 	-pastpeople[pastnum].honors = ["High Honor"]
+	-pastnum++
+	
+	-pastpeople.push({"email":"worte22r"})
+	-pastpeople[pastnum].name = "Rainy Wortelboer"
+	-pastpeople[pastnum].year = "2020"
+	-pastpeople[pastnum].majors = ["Highschool"]
+	-pastnum++
+	
+	-pastpeople.push({"email":"kimbe22a"})
+	-pastpeople[pastnum].name = "Ariel Kimberley"
+	-pastpeople[pastnum].year = "2021"
+	-pastpeople[pastnum].majors = ["Biology, Spanish"]
 	-pastnum++
 	
 	-var imgdir = "images/members/"
