--- a/layout.jade
+++ b/layout.jade
@@ -29,4 +29,4 @@ html.no-js(lang='en')
 			.row
 				.large-12.columns
 					a.footer(href='https://docs.google.com/forms/d/e/1FAIpQLSf9HgCdIzj28ivYKCR52nz6ZtDW2uewxBJBC3wXgCEwAJ8g2A/viewform?usp=sf_link' target='_blank')
-							| Interested&nbsp;in&nbsp;joining? Now&nbsp;accepting&nbsp;applications&nbsp;for the&nbsp;fall&nbsp;of&nbsp;2020! Apply here.
+							| Interested&nbsp;in&nbsp;joining? Email&nbsp;broaders@mtholyoke.edu to&nbsp;set&nbsp;up&nbsp;a&nbsp;meeting.
