photos for EGK and MW, new research and banner

--- a/index.jade
+++ b/index.jade
@@ -17,6 +17,9 @@ block content
 					.medium-11.medium-centered.columns
 						table.newslist
 							tr
+								td Jan&nbsp;'20
+								td Liz officially joins the group. Welcome!
+							tr
 								td Jul&nbsp;'19
 								td Amanda's 
 									a(href='https://doi.org/10.1021/acsabm.9b00399', target="_blank") paper on stable boronic esters for oxidation-triggered drug delivery
