--- a/layout.jade
+++ b/layout.jade
@@ -28,5 +28,5 @@ html.no-js(lang='en')
 		unless pageid == "opportunities"
 			.row
 				.large-12.columns
-					a.footer(href='https://docs.google.com/forms/d/e/1FAIpQLSf9HgCdIzj28ivYKCR52nz6ZtDW2uewxBJBC3wXgCEwAJ8g2A/viewform?usp=sf_link' target='_blank')
+					a.footer(href='mailto:broaders@mtholyoke.edu')
 							| Interested&nbsp;in&nbsp;joining? Email&nbsp;broaders@mtholyoke.edu to&nbsp;set&nbsp;up&nbsp;a&nbsp;meeting.
