Update publication citations

--- a/publications.jade
+++ b/publications.jade
@@ -111,13 +111,13 @@ block content
 	-publist.push({"title":"Spirocyclic acetal-modified dextran as a flexible pH-sensitive solubility switching material"})
 	-publist[14].authors = "E.T. Graham, K.E. Broaders"
 	-publist[14].journal = "Biomacromolecules"
-	-publist[14].datepage = "2019,20, 2008-2014"
+	-publist[14].datepage = "2019, 20, 2008-2014"
 	-publist[14].doi = "10.1021/acs.biomac.9b00215"
 
 	-publist.push({"title":"Oxidation-Sensitive Dextran-Based Polymer with Improved Processability through Stable Boronic Ester Groups"})
 	-publist[15].authors = "A.J. Manaster, C. Batty, P.Tiet, A. Ooi, E.M. Bachelder, K.M. Ainslie, K.E. Broaders"
 	-publist[15].journal = "ACS Applied Bio Materials"
-	-publist[15].datepage = "Article ASAP"
+	-publist[15].datepage = "2019, 2, 3755–3762"
 	-publist[15].doi = "10.1021/acsabm.9b00399"
 
 	-var publistRev = publist.reverse()
