Moved recent graduates to past and added news items for them

--- a/index.jade
+++ b/index.jade
@@ -17,6 +17,12 @@ block content
 					.medium-11.medium-centered.columns
 						table.newslist
 							tr
+								td May&nbsp;'20
+								td Congratulations to Sherry on finishing her thesis and graduating with High Honor in Biochemistry!
+							tr
+								td May&nbsp;'19
+								td Congratulations to Catherine for graduating!
+							tr
 								td Jan&nbsp;'20
 								td Liz officially joins the group. Welcome!
 							tr
@@ -24,12 +30,6 @@ block content
 								td Amanda's 
 									a(href='https://doi.org/10.1021/acsabm.9b00399', target="_blank") paper on stable boronic esters for oxidation-triggered drug delivery
 									| &#32;has been accepted to ACS Applied Bio Materials!
-							tr
-								td May&nbsp;'19
-								td Congratulations to Emily on graduating Summa Cum Laude in Chemistry!
-							tr
-								td May&nbsp;'19
-								td Congratulations to Amanda on graduating with High Honor in Biochemistry! 
 							tr
 								td Apr&nbsp;'19
 								td Emily's 
