--- a/people.jade
+++ b/people.jade
@@ -46,18 +46,6 @@ block content
 	-var currentpeople = []
 	
 	-var curnum = 0
-
-	-currentpeople.push({"email":"peabo22c"})
-	-currentpeople[curnum].name = "Catherine Peabody"
-	-currentpeople[curnum].year = "2020"
-	-currentpeople[curnum].majors = ["Biology","East Asian Studies"]
-	-curnum++
-
-	-currentpeople.push({"email":"yang36x"})
-	-currentpeople[curnum].name = "Xueyi (Sherry) Yang"
-	-currentpeople[curnum].year = "2020"
-	-currentpeople[curnum].majors = ["Biochemistry"]
-	-curnum++
 	
 	-currentpeople.push({"email":"kapla26a"})
 	-currentpeople[curnum].name = "Abby Kaplan"
@@ -69,7 +57,7 @@ block content
 	-currentpeople.push({"email":"windu22m"})
 	-currentpeople[curnum].name = "Maegan Windus"
 	-currentpeople[curnum].year = "2021"
-	-currentpeople[curnum].majors = ["Chemistry, Biology"]
+	-currentpeople[curnum].majors = ["Chemistry","Biology"]
 	-curnum++
 	
 	-currentpeople.push({"email":"zheng26q"})
@@ -171,6 +159,19 @@ block content
 	-pastpeople[pastnum].name = "Ariel Kimberley"
 	-pastpeople[pastnum].year = "2021"
 	-pastpeople[pastnum].majors = ["Biology, Spanish"]
+	-pastnum++
+
+	-pastpeople.push({"email":"peabo22c"})
+	-pastpeople[pastnum].name = "Catherine Peabody"
+	-pastpeople[pastnum].year = "2020"
+	-pastpeople[pastnum].majors = ["Biology","East Asian Studies"]
+	-pastnum++
+
+	-pastpeople.push({"email":"yang36x"})
+	-pastpeople[pastnum].name = "Xueyi (Sherry) Yang"
+	-pastpeople[pastnum].year = "2020"
+	-pastpeople[pastnum].majors = ["Biochemistry"]
+	-pastpeople[pastnum].honors = ["High Honor"]
 	-pastnum++
 	
 	-var imgdir = "images/members/"
