added IH, updated application

--- a/kb.jade
+++ b/kb.jade
@@ -59,7 +59,7 @@ block content
 								td 
 									a(href='https://pharmacy.ucsf.edu/zev-gartner', target="_blank") Zev Gartner
 						h5 Interests
-						p Throughout his career, Kyle has focused on the interplay between living tissues and their material world. He uses controllable synthetic and polymer chemistry to better understand the relationship between cells and their surroundings. 
+						p Throughout his career, Kyle has focused on making new functional molecules. He now uses synthetic and polymer chemistry to design and invent new materials that can control, respond to, or interact with living systems. 
 						dl.accordion(data-accordion="")
 							dd.accordion-navigation
 								a(href="#panel1").pastresearch Undergraduate Research
