--- a/people.jade
+++ b/people.jade
@@ -71,6 +71,12 @@ block content
 	-currentpeople[curnum].year = "2022"
 	-currentpeople[curnum].majors = ["Chemistry"]
 	-curnum++
+	
+	-currentpeople.push({"email":"haske22i"})
+	-currentpeople[curnum].name = "Isabela Haskell"
+	-currentpeople[curnum].year = "2023"
+	-currentpeople[curnum].majors = ["Biochemistry"]
+	-curnum++
 
 	-var pastpeople = []
 	-var pastnum = 0
