--- a/index.jade
+++ b/index.jade
@@ -17,6 +17,12 @@ block content
 					.medium-11.medium-centered.columns
 						table.newslist
 							tr
+								td Feb&nbsp;'21
+								td After shutting down for nearly 10 months, lab is reopening!  
+							tr
+								td Jan&nbsp;'21
+								td Isabela officially joins the group. Welcome!
+							tr
 								td May&nbsp;'20
 								td Congratulations to Sherry on finishing her thesis and graduating with High Honor in Biochemistry!
 							tr
