--- a/index.jade
+++ b/index.jade
@@ -17,27 +17,14 @@ block content
 					.medium-11.medium-centered.columns
 						table.newslist
 							tr
+								td May&nbsp;'20
+								td Congratulations to Maegan on finishing her thesis earning High Honor in Chemistry!
+							tr
+								td May&nbsp;'20
+								td Congratulations to Abby, Maegan, and Tracy for graduating!
+							tr
 								td Feb&nbsp;'21
 								td After shutting down for nearly 10 months, lab is reopening!  
 							tr
 								td Jan&nbsp;'21
 								td Isabela officially joins the group. Welcome!
-							tr
-								td May&nbsp;'20
-								td Congratulations to Sherry on finishing her thesis and graduating with High Honor in Biochemistry!
-							tr
-								td May&nbsp;'19
-								td Congratulations to Catherine for graduating!
-							tr
-								td Jan&nbsp;'20
-								td Liz officially joins the group. Welcome!
-							tr
-								td Jul&nbsp;'19
-								td Amanda's 
-									a(href='https://doi.org/10.1021/acsabm.9b00399', target="_blank") paper on stable boronic esters for oxidation-triggered drug delivery
-									| &#32;has been accepted to ACS Applied Bio Materials!
-							tr
-								td Apr&nbsp;'19
-								td Emily's 
-									a(href='https://doi.org/10.1021/acs.biomac.9b00215', target="_blank") paper on spirocyclic acetalated dextran
-									| &#32;has been accepted to Biomacromolecules!
