--- a/people.jade
+++ b/people.jade
@@ -47,25 +47,6 @@ block content
 	
 	-var curnum = 0
 	
-	-currentpeople.push({"email":"kapla26a"})
-	-currentpeople[curnum].name = "Abby Kaplan"
-	-currentpeople[curnum].year = "2021"
-	-currentpeople[curnum].majors = ["Biochemistry"]
-	-currentpeople[curnum].minors = ["Gender Studies"]
-	-curnum++
-	
-	-currentpeople.push({"email":"windu22m"})
-	-currentpeople[curnum].name = "Maegan Windus"
-	-currentpeople[curnum].year = "2021"
-	-currentpeople[curnum].majors = ["Chemistry","Biology"]
-	-curnum++
-	
-	-currentpeople.push({"email":"zheng26q"})
-	-currentpeople[curnum].name = "Tracy Zheng"
-	-currentpeople[curnum].year = "2021"
-	-currentpeople[curnum].majors = ["Biochemistry"]
-	-curnum++
-	
 	-currentpeople.push({"email":"kuehn22e"})
 	-currentpeople[curnum].name = "Liz Kuehne"
 	-currentpeople[curnum].year = "2022"
@@ -179,6 +160,28 @@ block content
 	-pastpeople[pastnum].majors = ["Biochemistry"]
 	-pastpeople[pastnum].honors = ["High Honor"]
 	-pastnum++
+	
+	-pastpeople.push({"email":"kapla26a"})
+	-pastpeople[pastnum].name = "Abby Kaplan"
+	-pastpeople[pastnum].year = "2021"
+	-pastpeople[pastnum].majors = ["Biochemistry"]
+	-pastpeople[pastnum].minors = ["Gender Studies"]
+	-pastnum++
+	
+	-pastpeople.push({"email":"windu22m"})
+	-pastpeople[pastnum].name = "Maegan Windus"
+	-pastpeople[pastnum].year = "2021"
+	-pastpeople[pastnum].majors = ["Chemistry","Biology"]
+	-pastpeople[pastnum].honors = ["High Honor"]
+	-pastnum++
+	
+	-pastpeople.push({"email":"zheng26q"})
+	-pastpeople[pastnum].name = "Tracy Zheng"
+	-pastpeople[pastnum].year = "2021"
+	-pastpeople[pastnum].majors = ["Biochemistry"]
+	-pastnum++
+	
+	-pastpeople.reverse()
 	
 	-var imgdir = "images/members/"
 	.row
