Added Nic to members

--- a/people.jade
+++ b/people.jade
@@ -58,6 +58,12 @@ block content
 	-currentpeople[curnum].year = "2023"
 	-currentpeople[curnum].majors = ["Biochemistry"]
 	-curnum++
+	
+	-currentpeople.push({"email":"long24m"})
+	-currentpeople[curnum].name = "Monich Long"
+	-currentpeople[curnum].year = "2022"
+	-currentpeople[curnum].majors = ["Highschool"]
+	-curnum++
 
 	-var pastpeople = []
 	-var pastnum = 0
