Updated research opportunity link, moved Monich to past members

--- a/layout.jade
+++ b/layout.jade
@@ -28,5 +28,5 @@ html.no-js(lang='en')
 		unless pageid == "opportunities"
 			.row
 				.large-12.columns
-					a.footer(href='https://docs.google.com/forms/d/e/1FAIpQLSf9HgCdIzj28ivYKCR52nz6ZtDW2uewxBJBC3wXgCEwAJ8g2A/viewform?usp=sf_link', target='_blank')
-						| Interested in joining? Click here to find out more!
+					a.footer(href='https://docs.google.com/forms/d/19k-gHXJ6O5PdTn2vUXr17JryAY4ITfEDf5g3Tj1E-48/edit', target='_blank')
+						| Interested in joining? Click for this semester's introductory experience. 
