--- a/people.jade
+++ b/people.jade
@@ -59,11 +59,6 @@ block content
 	-currentpeople[curnum].majors = ["Biochemistry"]
 	-curnum++
 	
-	-currentpeople.push({"email":"long24m"})
-	-currentpeople[curnum].name = "Monich Long"
-	-currentpeople[curnum].year = "2022"
-	-currentpeople[curnum].majors = ["Highschool"]
-	-curnum++
 
 	-var pastpeople = []
 	-var pastnum = 0
@@ -185,6 +180,12 @@ block content
 	-pastpeople[pastnum].name = "Tracy Zheng"
 	-pastpeople[pastnum].year = "2021"
 	-pastpeople[pastnum].majors = ["Biochemistry"]
+	-pastnum++
+	
+	-pastpeople.push({"email":"long24m"})
+	-pastpeople[pastnum].name = "Monich Long"
+	-pastpeople[pastnum].year = "2022"
+	-pastpeople[pastnum].majors = ["Highschool"]
 	-pastnum++
 	
 	-pastpeople.reverse()
