--- a/layout.jade
+++ b/layout.jade
@@ -28,5 +28,5 @@ html.no-js(lang='en')
 		unless pageid == "opportunities"
 			.row
 				.large-12.columns
-					a.footer(href='https://docs.google.com/forms/d/19k-gHXJ6O5PdTn2vUXr17JryAY4ITfEDf5g3Tj1E-48/edit', target='_blank')
+					a.footer(href='https://tinyurl.com/BroadersLabFall21', target='_blank')
 						| Interested in joining? Click for this semester's introductory experience. 
