--- a/layout.pug
+++ b/layout.pug
@@ -25,8 +25,8 @@ html.no-js(lang='en')
 			ga('send', 'pageview');
 
 			
-		unless pageid == "opportunities"
-			.row
-				.large-12.columns
-					a.footer(href='https://docs.google.com/forms/d/e/1FAIpQLSf9HgCdIzj28ivYKCR52nz6ZtDW2uewxBJBC3wXgCEwAJ8g2A/viewform', target='_blank')
-						| Interested in joining? Click Here! 
+//-		unless pageid == "opportunities"
+//-			.row
+//-				.large-12.columns
+//-					a.footer(href='https://docs.google.com/forms/d/e/1FAIpQLSf9HgCdIzj28ivYKCR52nz6ZtDW2uewxBJBC3wXgCEwAJ8g2A/viewform', target='_blank')
+//-						| Interested in joining? Click Here! 
