added new members

--- a/people.pug
+++ b/people.pug
@@ -47,12 +47,6 @@ block content
 	
 	-var curnum = 0
 	
-	-currentpeople.push({"email":"kuehn22e"})
-	-currentpeople[curnum].name = "Liz Kuehne"
-	-currentpeople[curnum].year = "2022"
-	-currentpeople[curnum].majors = ["Chemistry"]
-	-curnum++
-	
 	-currentpeople.push({"email":"haske22i"})
 	-currentpeople[curnum].name = "Isabela Haskell"
 	-currentpeople[curnum].year = "2023"
@@ -81,6 +75,18 @@ block content
 	-currentpeople[curnum].name = "Reece Liu"
 	-currentpeople[curnum].year = "2024"
 	-currentpeople[curnum].majors = ["Chemistry, Philosophy"]
+	-curnum++
+	
+	-currentpeople.push({"email":"kawas22i"})
+	-currentpeople[curnum].name = "Illia Kawash-Cooper"
+	-currentpeople[curnum].year = "2025"
+	-currentpeople[curnum].majors = ["Undeclared"]
+	-curnum++
+	
+	-currentpeople.push({"email":"peng23x"})
+	-currentpeople[curnum].name = "Xinran (Ran) Peng"
+	-currentpeople[curnum].year = "2025"
+	-currentpeople[curnum].majors = ["Undeclared"]
 	-curnum++
 
 	-var pastpeople = []
@@ -209,6 +215,12 @@ block content
 	-pastpeople[pastnum].name = "Monich Long"
 	-pastpeople[pastnum].year = "2022"
 	-pastpeople[pastnum].majors = ["Highschool"]
+	-pastnum++
+	
+	-pastpeople.push({"email":"kuehn22e"})
+	-pastpeople[pastnum].name = "Liz Kuehne"
+	-pastpeople[pastnum].year = "2022"
+	-pastpeople[pastnum].majors = ["Chemistry"]
 	-pastnum++
 	
 	-pastpeople.reverse()
