--- a/index.pug
+++ b/index.pug
@@ -17,6 +17,12 @@ block content
 					.medium-11.medium-centered.columns
 						table.newslist
 							tr
+								td Sept&nbsp;'22
+								td Welcome to our newest members, Illia and Ran!
+							tr
+								td May&nbsp;'22
+								td Congratulations to Liz on graduating!
+							tr
 								td Jan&nbsp;'22
 								td Aaditi, Echo, Reece, and Venus officially join the group. Welcome all!
 							tr
@@ -25,9 +31,3 @@ block content
 							tr
 								td May&nbsp;'21
 								td Congratulations to Abby, Maegan, and Tracy for graduating!
-							tr
-								td Feb&nbsp;'21
-								td After shutting down for nearly 10 months, lab is reopening!  
-							tr
-								td Jan&nbsp;'21
-								td Isabela officially joins the group. Welcome!
