new students, news

--- a/index.pug
+++ b/index.pug
@@ -17,17 +17,14 @@ block content
 					.medium-11.medium-centered.columns
 						table.newslist
 							tr
+								td Apr&nbsp;'23
+								td Illia is selected as a #[a(href="https://www.beckman-foundation.org/programs/beckman-scholars/",target="_blank") Beckman Scholar] — congratulations!
+							tr
+								td Jan&nbsp;'23
+								td Welcome to our newest members, Natalia and Mariana!
+							tr
 								td Sept&nbsp;'22
 								td Welcome to our newest members, Illia and Ran!
 							tr
 								td May&nbsp;'22
 								td Congratulations to Liz on graduating!
-							tr
-								td Jan&nbsp;'22
-								td Aaditi, Echo, Reece, and Venus officially join the group. Welcome all!
-							tr
-								td May&nbsp;'21
-								td Congratulations to Maegan on finishing her thesis earning High Honor in Chemistry!
-							tr
-								td May&nbsp;'21
-								td Congratulations to Abby, Maegan, and Tracy for graduating!
