--- a/people.pug
+++ b/people.pug
@@ -80,13 +80,25 @@ block content
 	-currentpeople.push({"email":"kawas22i"})
 	-currentpeople[curnum].name = "Illia Kawash-Cooper"
 	-currentpeople[curnum].year = "2025"
-	-currentpeople[curnum].majors = ["Undeclared"]
+	-currentpeople[curnum].majors = ["Chemistry"]
 	-curnum++
 	
 	-currentpeople.push({"email":"peng23x"})
 	-currentpeople[curnum].name = "Xinran (Ran) Peng"
 	-currentpeople[curnum].year = "2025"
-	-currentpeople[curnum].majors = ["Undeclared"]
+	-currentpeople[curnum].majors = ["Biochemistry"]
+	-curnum++
+	
+	-currentpeople.push({"email":"crisa22m"})
+	-currentpeople[curnum].name = "Mariana Crisanto"
+	-currentpeople[curnum].year = "2025"
+	-currentpeople[curnum].majors = ["Biochemistry"]
+	-curnum++
+	
+	-currentpeople.push({"email":"pollo22n"})
+	-currentpeople[curnum].name = "Natalia Pollock-O'Dorisio"
+	-currentpeople[curnum].year = "2025"
+	-currentpeople[curnum].majors = ["Biochemistry"]
 	-curnum++
 
 	-var pastpeople = []
