--- a/people.pug
+++ b/people.pug
@@ -62,7 +62,7 @@ block content
 	-currentpeople.push({"email":"fukam22v"})
 	-currentpeople[curnum].name = "Venus Fukami"
 	-currentpeople[curnum].year = "2024"
-	-currentpeople[curnum].majors = ["Undecided"]
+	-currentpeople[curnum].majors = ["Chemistry"]
 	-curnum++
 	
 	-currentpeople.push({"email":"haver22e"})
@@ -91,7 +91,7 @@ block content
 	
 	-currentpeople.push({"email":"crisa22m"})
 	-currentpeople[curnum].name = "Mariana Crisanto"
-	-currentpeople[curnum].year = "2025"
+	-currentpeople[curnum].year = "2024"
 	-currentpeople[curnum].majors = ["Biochemistry"]
 	-curnum++
 	
