--- a/index.pug
+++ b/index.pug
@@ -17,6 +17,9 @@ block content
 					.medium-11.medium-centered.columns
 						table.newslist
 							tr
+								td May&nbsp;'23
+								td Congratulations to Aaditi and Isabela on graduating and each earning high honors on their theses!
+							tr
 								td Apr&nbsp;'23
 								td Illia is selected as a #[a(href="https://www.beckman-foundation.org/programs/beckman-scholars/",target="_blank") Beckman Scholar] — congratulations!
 							tr
@@ -25,6 +28,3 @@ block content
 							tr
 								td Sept&nbsp;'22
 								td Welcome to our newest members, Illia and Ran!
-							tr
-								td May&nbsp;'22
-								td Congratulations to Liz on graduating!
