--- a/people.pug
+++ b/people.pug
@@ -47,18 +47,6 @@ block content
 	
 	-var curnum = 0
 	
-	-currentpeople.push({"email":"haske22i"})
-	-currentpeople[curnum].name = "Isabela Haskell"
-	-currentpeople[curnum].year = "2023"
-	-currentpeople[curnum].majors = ["Biochemistry"]
-	-curnum++
-	
-	-currentpeople.push({"email":"chopa22a"})
-	-currentpeople[curnum].name = "Aaditi Chopade"
-	-currentpeople[curnum].year = "2023"
-	-currentpeople[curnum].majors = ["Astronomy, Neuroscience"]
-	-curnum++
-	
 	-currentpeople.push({"email":"fukam22v"})
 	-currentpeople[curnum].name = "Venus Fukami"
 	-currentpeople[curnum].year = "2024"
@@ -233,6 +221,18 @@ block content
 	-pastpeople[pastnum].name = "Liz Kuehne"
 	-pastpeople[pastnum].year = "2022"
 	-pastpeople[pastnum].majors = ["Chemistry"]
+	-pastnum++
+	
+	-pastpeople.push({"email":"haske22i"})
+	-pastpeople[pastnum].name = "Isabela Haskell"
+	-pastpeople[pastnum].year = "2023"
+	-pastpeople[pastnum].majors = ["Biochemistry"]
+	-pastnum++
+	
+	-pastpeople.push({"email":"chopa22a"})
+	-pastpeople[pastnum].name = "Aaditi Chopade"
+	-pastpeople[pastnum].year = "2023"
+	-pastpeople[pastnum].majors = ["Chemistry (ACS degree), Astronomy"]
 	-pastnum++
 	
 	-pastpeople.reverse()
