--- a/index.pug
+++ b/index.pug
@@ -17,14 +17,11 @@ block content
 					.medium-11.medium-centered.columns
 						table.newslist
 							tr
+								td Jan&nbsp;'24
+								td Welcome to our newest members, Abby and Davida!
+							tr
 								td May&nbsp;'23
 								td Congratulations to Aaditi and Isabela on graduating and each earning high honors on their theses!
 							tr
 								td Apr&nbsp;'23
 								td Illia is selected as a #[a(href="https://www.beckman-foundation.org/programs/beckman-scholars/",target="_blank") Beckman Scholar] — congratulations!
-							tr
-								td Jan&nbsp;'23
-								td Welcome to our newest members, Natalia and Mariana!
-							tr
-								td Sept&nbsp;'22
-								td Welcome to our newest members, Illia and Ran!
