--- a/people.pug
+++ b/people.pug
@@ -47,22 +47,11 @@ block content
 	
 	-var curnum = 0
 	
-	-currentpeople.push({"email":"fukam22v"})
-	-currentpeople[curnum].name = "Venus Fukami"
-	-currentpeople[curnum].year = "2024"
-	-currentpeople[curnum].majors = ["Chemistry"]
-	-curnum++
 	
 	-currentpeople.push({"email":"haver22e"})
 	-currentpeople[curnum].name = "Echo Haverkamp"
 	-currentpeople[curnum].year = "2024"
 	-currentpeople[curnum].majors = ["Biochemistry"]
-	-curnum++
-	
-	-currentpeople.push({"email":"liu229y"})
-	-currentpeople[curnum].name = "Reece Liu"
-	-currentpeople[curnum].year = "2024"
-	-currentpeople[curnum].majors = ["Chemistry, Philosophy"]
 	-curnum++
 	
 	-currentpeople.push({"email":"kawas22i"})
@@ -86,8 +75,21 @@ block content
 	-currentpeople.push({"email":"pollo23n"})
 	-currentpeople[curnum].name = "Natalia Pollock-O'Dorisio"
 	-currentpeople[curnum].year = "2025"
-	-currentpeople[curnum].majors = ["Biochemistry"]
+	-currentpeople[curnum].majors = ["Chemistry"]
 	-curnum++
+	
+	-currentpeople.push({"email":"bowde22a"})
+	-currentpeople[curnum].name = "Abby Bowden"
+	-currentpeople[curnum].year = "2025"
+	-currentpeople[curnum].majors = ["Chemistry"]
+	-curnum++
+
+	-currentpeople.push({"email":"afriy22d"})
+	-currentpeople[curnum].name = "Davida Afriye"
+	-currentpeople[curnum].year = "2026"
+	-currentpeople[curnum].majors = ["Chemistry"]
+	-curnum++
+
 
 	-var pastpeople = []
 	-var pastnum = 0
@@ -227,12 +229,26 @@ block content
 	-pastpeople[pastnum].name = "Isabela Haskell"
 	-pastpeople[pastnum].year = "2023"
 	-pastpeople[pastnum].majors = ["Biochemistry"]
+	-pastpeople[pastnum].honors = ["High Honor"]
 	-pastnum++
 	
 	-pastpeople.push({"email":"chopa22a"})
 	-pastpeople[pastnum].name = "Aaditi Chopade"
 	-pastpeople[pastnum].year = "2023"
 	-pastpeople[pastnum].majors = ["Chemistry (ACS degree), Astronomy"]
+	-pastpeople[pastnum].honors = ["High Honor"]
+	-pastnum++
+	
+	-pastpeople.push({"email":"fukam22v"})
+	-pastpeople[pastnum].name = "Venus Fukami"
+	-pastpeople[pastnum].year = "2024"
+	-pastpeople[pastnum].majors = ["Chemistry"]
+	-pastnum++
+	
+	-pastpeople.push({"email":"liu229y"})
+	-pastpeople[pastnum].name = "Reece Liu"
+	-pastpeople[pastnum].year = "2024"
+	-pastpeople[pastnum].majors = ["Chemistry, Physics"]
 	-pastnum++
 	
 	-pastpeople.reverse()
