news and fix spelling error

--- a/index.pug
+++ b/index.pug
@@ -17,6 +17,9 @@ block content
 					.medium-11.medium-centered.columns
 						table.newslist
 							tr
+								td May&nbsp;'24
+								td Congratulations to Echo and Mariana on their graduation and many accomplisments!
+							tr
 								td Jan&nbsp;'24
 								td Welcome to our newest members, Abby and Davida!
 							tr
