--- a/people.pug
+++ b/people.pug
@@ -85,7 +85,7 @@ block content
 	-curnum++
 
 	-currentpeople.push({"email":"afriy22d"})
-	-currentpeople[curnum].name = "Davida Afriye"
+	-currentpeople[curnum].name = "Davida Afriyie"
 	-currentpeople[curnum].year = "2026"
 	-currentpeople[curnum].majors = ["Chemistry"]
 	-curnum++
