updated for graduated seniors

--- a/people.pug
+++ b/people.pug
@@ -48,12 +48,6 @@ block content
 	-var curnum = 0
 	
 	
-	-currentpeople.push({"email":"haver22e"})
-	-currentpeople[curnum].name = "Echo Haverkamp"
-	-currentpeople[curnum].year = "2024"
-	-currentpeople[curnum].majors = ["Biochemistry"]
-	-curnum++
-	
 	-currentpeople.push({"email":"kawas22i"})
 	-currentpeople[curnum].name = "Illia Kawash-Cooper"
 	-currentpeople[curnum].year = "2025"
@@ -63,12 +57,6 @@ block content
 	-currentpeople.push({"email":"peng23x"})
 	-currentpeople[curnum].name = "Xinran (Ran) Peng"
 	-currentpeople[curnum].year = "2025"
-	-currentpeople[curnum].majors = ["Biochemistry"]
-	-curnum++
-	
-	-currentpeople.push({"email":"crisa22m"})
-	-currentpeople[curnum].name = "Mariana Crisanto"
-	-currentpeople[curnum].year = "2024"
 	-currentpeople[curnum].majors = ["Biochemistry"]
 	-curnum++
 	
@@ -249,6 +237,18 @@ block content
 	-pastpeople[pastnum].name = "Reece Liu"
 	-pastpeople[pastnum].year = "2024"
 	-pastpeople[pastnum].majors = ["Chemistry, Physics"]
+	-pastnum++
+	
+	-pastpeople.push({"email":"haver22e"})
+	-pastpeople[pastnum].name = "Echo Haverkamp"
+	-pastpeople[pastnum].year = "2024"
+	-pastpeople[pastnum].majors = ["Biochemistry"]
+	-pastnum++
+	
+	-pastpeople.push({"email":"crisa22m"})
+	-pastpeople[pastnum].name = "Mariana Crisanto"
+	-pastpeople[pastnum].year = "2024"
+	-pastpeople[pastnum].majors = ["Biochemistry"]
 	-pastnum++
 	
 	-pastpeople.reverse()
