add new students

--- a/people.pug
+++ b/people.pug
@@ -75,6 +75,18 @@ block content
 	-currentpeople.push({"email":"afriy22d"})
 	-currentpeople[curnum].name = "Davida Afriyie"
 	-currentpeople[curnum].year = "2026"
+	-currentpeople[curnum].majors = ["Biochemistry"]
+	-curnum++
+	
+	-currentpeople.push({"email":"pokha26a"})
+	-currentpeople[curnum].name = "Ashh Pokharel"
+	-currentpeople[curnum].year = "2027"
+	-currentpeople[curnum].majors = ["Chemistry"]
+	-curnum++
+	
+	-currentpeople.push({"email":"yakub24f"})
+	-currentpeople[curnum].name = "Fati Yakubu"
+	-currentpeople[curnum].year = "2027"
 	-currentpeople[curnum].majors = ["Chemistry"]
 	-curnum++
 
