add new students

--- a/index.pug
+++ b/index.pug
@@ -16,15 +16,13 @@ block content
 				.row
 					.medium-11.medium-centered.columns
 						table.newslist
+							
+							tr
+								td Jan&nbsp;'24
+								td Welcome to our newest members, Max, Eliza, and Gwyn!
+							tr
+								td Sept&nbsp;'24
+								td Welcome to our newest members, Fati and Ashh!
 							tr
 								td May&nbsp;'24
 								td Congratulations to Echo and Mariana on their graduation and many accomplisments!
-							tr
-								td Jan&nbsp;'24
-								td Welcome to our newest members, Abby and Davida!
-							tr
-								td May&nbsp;'23
-								td Congratulations to Aaditi and Isabela on graduating and each earning high honors on their theses!
-							tr
-								td Apr&nbsp;'23
-								td Illia is selected as a #[a(href="https://www.beckman-foundation.org/programs/beckman-scholars/",target="_blank") Beckman Scholar] — congratulations!
