--- a/people.pug
+++ b/people.pug
@@ -75,7 +75,7 @@ block content
 	-currentpeople.push({"email":"afriy22d"})
 	-currentpeople[curnum].name = "Davida Afriyie"
 	-currentpeople[curnum].year = "2026"
-	-currentpeople[curnum].majors = ["Biochemistry"]
+	-currentpeople[curnum].majors = ["Chemistry"]
 	-curnum++
 	
 	-currentpeople.push({"email":"pokha26a"})
@@ -89,6 +89,26 @@ block content
 	-currentpeople[curnum].year = "2027"
 	-currentpeople[curnum].majors = ["Chemistry"]
 	-curnum++
+	
+	-currentpeople.push({"email":"willi38e"})
+	-currentpeople[curnum].name = "Eliza Williams-Derry"
+	-currentpeople[curnum].year = "2026"
+	-currentpeople[curnum].majors = ["Biochemistry"]
+	-curnum++
+	
+	-currentpeople.push({"email":"munro22g"})
+	-currentpeople[curnum].name = "Gwyn Munroe"
+	-currentpeople[curnum].year = "2026"
+	-currentpeople[curnum].majors = ["Biochemistry"]
+	-curnum++	
+	
+	-currentpeople.push({"email":"frase25m"})
+	-currentpeople[curnum].name = "Max Fraser"
+	-currentpeople[curnum].year = "2027"
+	-currentpeople[curnum].majors = ["Chemistry"]
+	-curnum++
+	 
+
 
 
 	-var pastpeople = []
