added alums and new student

--- a/index.pug
+++ b/index.pug
@@ -16,13 +16,15 @@ block content
 				.row
 					.medium-11.medium-centered.columns
 						table.newslist
-							
 							tr
-								td Jan&nbsp;'24
+								td Sept&nbsp;'25
+								td Welcome to our newest member, Emmy!
+							tr
+								td May&nbsp;'25
+								td Congratulations to Illia, Natalia, Abby, and Ran on graduating! <br>Illia earned <em>summa cum laude</em> and Abby and Natalia both earned high honors on their theses.
+							tr
+								td Jan&nbsp;'25
 								td Welcome to our newest members, Max, Eliza, and Gwyn!
 							tr
 								td Sept&nbsp;'24
 								td Welcome to our newest members, Fati and Ashh!
-							tr
-								td May&nbsp;'24
-								td Congratulations to Echo and Mariana on their graduation and many accomplisments!
