new students, new pub

--- a/index.pug
+++ b/index.pug
@@ -1,5 +1,4 @@
 extends layout
-
 block vars
 	-var pageid = "home"
 
@@ -17,14 +16,16 @@ block content
 					.medium-11.medium-centered.columns
 						table.newslist
 							tr
+								td Jan&nbsp;'26
+								td Welcome to our newest members, Audrey, Elizabeth, and Hitomi!
+							tr
+								td Nov&nbsp;'25
+								td 
+									a(href='https://pubs.acs.org/doi/10.1021/acsomega.5c07631') Our newest paper
+									is out in ACS Omega!Congrats to Liz, Abby, and Maxine
+							tr
 								td Sept&nbsp;'25
 								td Welcome to our newest member, Emmy!
 							tr
 								td May&nbsp;'25
 								td Congratulations to Illia, Natalia, Abby, and Ran on graduating! <br>Illia earned <em>summa cum laude</em> and Abby and Natalia both earned high honors on their theses.
-							tr
-								td Jan&nbsp;'25
-								td Welcome to our newest members, Max, Eliza, and Gwyn!
-							tr
-								td Sept&nbsp;'24
-								td Welcome to our newest members, Fati and Ashh!
