--- a/people.pug
+++ b/people.pug
@@ -58,7 +58,7 @@ block content
 	-curnum++
 	
 	-currentpeople.push({"email":"pokha26a"})
-	-currentpeople[curnum].name = "Ashh Pokharel"
+	-currentpeople[curnum].name = "Aishworya Pokharel"
 	-currentpeople[curnum].year = "2027"
 	-currentpeople[curnum].majors = ["Chemistry"]
 	-curnum++
@@ -82,7 +82,7 @@ block content
 	-curnum++	
 	
 	-currentpeople.push({"email":"frase25m"})
-	-currentpeople[curnum].name = "Max Fraser"
+	-currentpeople[curnum].name = "Maxine Fraser"
 	-currentpeople[curnum].year = "2027"
 	-currentpeople[curnum].majors = ["Chemistry"]
 	-curnum++
@@ -91,6 +91,24 @@ block content
 	-currentpeople[curnum].name = "Emmy McCormack"
 	-currentpeople[curnum].year = "2026"
 	-currentpeople[curnum].majors = ["Chemistry"]
+	-curnum++
+
+	-currentpeople.push({"email":"hanan23a"})
+	-currentpeople[curnum].name = "Audrey Hanan"
+	-currentpeople[curnum].year = "2028"
+	-currentpeople[curnum].majors = ["Chemistry"]
+	-curnum++
+	
+	-currentpeople.push({"email":"kisor22e"})
+	-currentpeople[curnum].name = "Elizabeth Kisor"
+	-currentpeople[curnum].year = "2028"
+	-currentpeople[curnum].majors = ["Chemistry"]
+	-curnum++
+	
+	-currentpeople.push({"email":"nakam22h"})
+	-currentpeople[curnum].name = "Hitomi Nakamura"
+	-currentpeople[curnum].year = "2028"
+	-currentpeople[curnum].majors = ["Biochemistry"]
 	-curnum++
 	 
 
