--- a/publications.pug
+++ b/publications.pug
@@ -119,6 +119,12 @@ block content
 	-publist[15].journal = "ACS Applied Bio Materials"
 	-publist[15].datepage = "2019, 2, 3755–3762"
 	-publist[15].doi = "10.1021/acsabm.9b00399"
+	
+	-publist.push({"title":"Ketal-Modified Cellulose as a Biodegradable Bioplastic"})
+	-publist[16].authors = "K.E. Broaders, E. Kuehne, A.C. Bowden, M.R. Fraser"
+	-publist[16].journal = "ACS Omega"
+	-publist[16].datepage = "2025, 10, 56025-56031"
+	-publist[16].doi = "10.1021/acsomega.5c07631"
 
 	-var publistRev = publist.reverse()
 	.row
